--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,6 @@ version = "0.1.0"
 
 [deps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SparseDynamicSystem = "63e9e430-5fc9-11eb-031d-adf6431fa084"
