--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,13 @@ authors = ["Jared Miller <jared.fr.miller@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseDynamicSystem = "63e9e430-5fc9-11eb-031d-adf6431fa084"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
