--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mosek = "6405355b-0ac2-5fba-af84-adbd65488c0e"
