--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Jared Miller <jared.fr.miller@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DynamicPolynomials = "7c1d4256-1411-5781-91ec-d7bc3513ac07"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
